--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "preact": "^10.13.2"
+    "@nanostores/preact": "^0.5.0",
+    "d3-force-3d": "^3.0.5",
+    "nanostores": "^0.9.3",
+    "preact": "^10.13.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.5.0",
