--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nanostores/preact": "^0.5.0",
     "d3-force-3d": "^3.0.5",
     "nanostores": "^0.9.3",
+    "nanostores-computed-dynamic": "^0.2.0",
     "pixi.js": "^7.2.4",
     "preact": "^10.13.2",
     "zod": "^3.21.4"
